[package]
name = "link-preview"
version = "0.2.1"
authors = ["Leo Borai <estebanborai@gmail.com>"]
edition = "2021"
description = "Retrieve website metadata such as title, description, preview image, author and more from OpenGraph, Google, Schema.org and Twitter compliant sites"
keywords = ["link", "schema-org", "open-graph", "website", "metadata"]
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["web-programming"]

[features]
blocking = ["reqwest/blocking"]
fetch = ["dep:reqwest"]
serde = ["dep:serde", "url/serde"]
stream = ["dep:futures-util", "reqwest/stream"]

[dependencies]
futures-util = { version = "0.3.31", optional = true, default-features = false }
regex = { version = "1.11", default-features = false }
scraper = "0.24"
thiserror = "2.0"
url = "2.5"

[dependencies.reqwest]
default-features = false
optional = true
features = ["rustls-tls"]
version = "0.12"

[dependencies.serde]
default-features = false
features = ["derive"]
optional = true
version = "1.0"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
